--- a/setup/format.tex
+++ b/setup/format.tex
@@ -134,15 +134,18 @@
 \makeatletter
 \long\def\@makecaption#1#2{%
    \vskip\abovecaptionskip
-   \sbox\@tempboxa{\centering\wuhao\song{#1\qquad #2} }%
-   \ifdim \wd\@tempboxa >\hsize
-     \centering\wuhao\song{#1\qquad #2} \par
-   \else
-     \global \@minipagefalse
-     \hb@xt@\hsize{\hfil\box\@tempboxa\hfil}%
-   \fi
+   \begingroup
+     \setlength{\baselineskip}{20pt}%
+     \sbox\@tempboxa{\centering\wuhao\song{#1\qquad #2}}%
+     \ifdim \wd\@tempboxa >\hsize
+       \centering\wuhao\song{#1\qquad #2}\par
+     \else
+       \global \@minipagefalse
+       \hb@xt@\hsize{\hfil\box\@tempboxa\hfil}%
+     \fi
+   \endgroup
    \vskip\belowcaptionskip}
-\makeatother
+\makeatletter
 \captiondelim{~~~~} %用来控制longtable表头分隔符
 
 %%%%%%%%%% Theorem Environment %%%%%%%%%%%%%%%%%
@@ -284,6 +287,9 @@
     \begin{titlepage}
       \vspace*{0.8cm}
       \begin{center}
+
+      \includegraphics[height=1.75cm,keepaspectratio]{./preface/tjulogo.png} % 设置校徽 （天津大学关于博士、硕士学位论文统一格式的规定（2021年修订20250605更新扉页版））
+      % \vspace*{-0.2cm}
 
       \vspace*{1cm}
       \begin{center}
