chore: formatted document

--- a/references/reference.bib
+++ b/references/reference.bib
@@ -1,10 +1,26 @@
+@techreport{白皮书2018,
+  author      = {中国电子技术标准化研究院},
+  title       = {人工智能标准化白皮书（2018 版）},
+  institution = {中国电子技术标准化研究院},
+  year        = {2018}
+}
+
+@phdthesis{卢莉萍,
+  author  = {卢莉萍},
+  title   = {目标跟踪算法与检测处理技术研究},
+  school  = {南京理工大学},
+  year    = {2012},
+  type    = {博士论文},
+  address = {南京}
+}
+
 @inproceedings{C-COT,
-  title={Beyond correlation filters: learning continuous convolution operators for visual tracking},
-  author={Martin Danelljan and Andreas Robinson and Fahad Shahbaz Khan and Michael Felsberg},
+  title     = {Beyond correlation filters: learning continuous convolution operators for visual tracking},
+  author    = {Martin Danelljan and Andreas Robinson and Fahad Shahbaz Khan and Michael Felsberg},
   booktitle = {European Conference on Computer Vision },
-  pages={472--488},
-  year={2016},
-  address={Amsterdam}
+  pages     = {472--488},
+  year      = {2016},
+  address   = {Amsterdam}
 }
 
 @inproceedings{SiamFC,
@@ -15,16 +31,7 @@
   year      = {2016},
   address   = {Amsterdam}
 }
-
-@inproceedings{SiamRPN,
-  author    = {Bo Li and Junjie Yan and Wei Wu and Zheng Zhu and Xiaolin Hu},
-  title     = {High performance visual tracking with siamese region proposal network},
-  booktitle = {{IEEE} Conference on Computer Vision and Pattern Recognition},
-  pages     = {8971--8980},
-  year      = {2018},
-  address   = {Salt Lake City}
-}
-
+  
 @inproceedings{SiamMask,
   author    = {Qiang Wang and Li Zhang and Luca Bertinetto and Weiming Hu and Philip H. S. Torr},
   title     = {Fast online object tracking and segmentation: a unifying approach},
@@ -33,19 +40,12 @@
   year      = {2019},
   address   = {Long Beach}
 }
-  
-@phdthesis{卢莉萍,
-author={卢莉萍},
-title={目标跟踪算法与检测处理技术研究},
-school={南京理工大学},
-year={2012},
-type={博士论文},
-ADDRESS={南京},
-}
 
-@techreport{白皮书2018,
-author = {中国电子技术标准化研究院},
-title = {人工智能标准化白皮书（2018 版）},
-institution = {中国电子技术标准化研究院},
-year = {2018}
+@inproceedings{SiamRPN,
+  author    = {Bo Li and Junjie Yan and Wei Wu and Zheng Zhu and Xiaolin Hu},
+  title     = {High performance visual tracking with siamese region proposal network},
+  booktitle = {{IEEE} Conference on Computer Vision and Pattern Recognition},
+  pages     = {8971--8980},
+  year      = {2018},
+  address   = {Salt Lake City}
 }
