fix: improve the content format

--- a/tjumain.tex
+++ b/tjumain.tex
@@ -28,6 +28,7 @@
 \defaultfont
 \clearpage{
     \pagestyle{only_foot}
+    \addcontentsline{toc}{chapter*}{目\qquad 录}
     \tableofcontents                           % 中文目录
     \thispagestyle{only_foot}
 }
