--- a/setup/format.tex
+++ b/setup/format.tex
@@ -12,11 +12,11 @@
 % WH的留言：之所以没有直接将simsun.ttc放入代码中，一方面是文件过大，另一方面是中易宋体并不是免费使用的。
 %           不过人家也不会因为你用他们的字体写论文去专门找你。
 %           但是有一些其他的宋体是免费的，这就可以请大家自行发挥了。
-% \setCJKfamilyfont{song}[AutoFakeBold = {3.17},Path=fonts/]{simsun.ttc}
-% \newcommand{\song}{\CJKfamily{song}}
+\setCJKfamilyfont{song}[AutoFakeBold = {3.17},Path=fonts/]{simsun.ttc}
+\newcommand{\song}{\CJKfamily{song}}
 
 
-\newcommand{\song}{\songti}    % 宋体
+% \newcommand{\song}{\songti}    % 宋体
 \newcommand{\fs}{\fangsong}        % 仿宋体
 \newcommand{\kai}{\kaishu}      % 楷体
 \newcommand{\hei}{\heiti}      % 黑体
@@ -89,8 +89,11 @@
 
 \renewcommand{\contentsname}{目\qquad 录}
 \setcounter{tocdepth}{2}
-\titlecontents{chapter}[0em]{\vspace{0pt}\xiaosi\song}%
+\titlecontents{chapter}[0em]{\vspace{0pt}\xiaosi\hei\bfseries}%
 {\prechaptername\thecontentslabel\postchaptername\quad}{} %
+{\hspace{.5em}\titlerule*[5pt]{.}\xiaosi\contentspage}
+\titlecontents{chapter*}[0em]{\vspace{0pt}\xiaosi\hei\bfseries}%
+{}{} %
 {\hspace{.5em}\titlerule*[5pt]{.}\xiaosi\contentspage}
 \titlecontents{section}[2em]{\vspace{0pt}\xiaosi\song} %
 {\thecontentslabel\quad}{} %
@@ -366,7 +369,7 @@
   %%%%%%%%%%%%%%%%%%%   Abstract and Keywords  %%%%%%%%%%%%%%%%%%%%%%%
   \clearpage{\pagestyle{empty}\cleardoublepage} %去除空白页的页眉页脚（由于每章从奇数页开始因此有空白页）
   \markboth{摘~要}{摘~要}
-  % \addcontentsline{toc}{chapter}{摘\qquad 要}
+  \addcontentsline{toc}{chapter*}{摘\qquad 要}
   \chapter*{\centering\song\erhao\textbf{摘\qquad 要}}
   \thispagestyle{only_foot}
 
@@ -377,12 +380,12 @@
 
   %\hangafter=1\hangindent=52.3pt\noindent   %如果取消该行注释，关键词换行时将会自动缩进
   \noindent
-  {\song\sihao\textbf{ 关键词：}} \@ckeywords
+  {\song\sihao\textbf{关键词：}} \@ckeywords
 
   %%%%%%%%%%%%%%%%%%%   English Abstract  %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
   \clearpage{\pagestyle{empty}\cleardoublepage} %去除空白页的页眉页脚（由于每章从奇数页开始因此有空白页）
   \markboth{ABSTRACT}{ABSTRACT}
-  % \addcontentsline{toc}{chapter}{ABSTRACT}
+  \addcontentsline{toc}{chapter*}{ABSTRACT}
   \chapter*{\centering\erhao\textbf{ABSTRACT}}
   \thispagestyle{only_foot}
   \@eabstract
@@ -390,7 +393,7 @@
 
   %\hangafter=1\hangindent=60pt\noindent  %如果取消该行注释，KEY WORDS换行时将会自动缩进
   \noindent
-  {\sihao\textbf{KEY WORDS：}}  \@ekeywords
+  {\sihao\textbf{KEY WORDS:}}  \@ekeywords
 }
 
 \makeatother
