chore: use cref instead of ref

--- a/setup/format.tex
+++ b/setup/format.tex
@@ -218,6 +218,19 @@
 %% 引用格式
 \bibpunct{[}{]}{,}{s}{}{,}
 
+%%%%%%%%%% cleveref format %%%%%%%%%%%%%%%%%
+% 设置 cref 的中文标签名称
+\crefname{figure}{图}{图}
+\Crefname{figure}{图}{图}
+\crefname{table}{表}{表}
+\Crefname{table}{表}{表}
+\crefname{equation}{公式}{公式}
+\Crefname{equation}{公式}{公式}
+\crefname{chapter}{第}{章}
+\Crefname{chapter}{第}{章}
+\crefname{section}{节}{节}
+\Crefname{section}{节}{节}
+
 %%%%%%%%%% Cover %%%%%%%%%%%%%%%%%
 % 封面、摘要、版权、致谢格式定义
 \makeatletter
