feat: use gbt7714 package bst file

--- a/tjumain.tex
+++ b/tjumain.tex
@@ -46,7 +46,7 @@
 
 %%%%%%%%%%  参考文献  %%%%%%%%%%
 \defaultfont
-\bibliographystyle{references/TJUThesis}
+\bibliographystyle{references/gbt7714-numerical}
 \phantomsection
 \markboth{参考文献}{参考文献}
 \addcontentsline{toc}{chapter}{参考文献}          % 参考文献加入到中文目录
