--- a/setup/package.tex
+++ b/setup/package.tex
@@ -3,7 +3,6 @@
 %           余蓝涛 Lantao Yu: lantaoyu1991@gmail.com  天津大学2008级精密仪器与光电子工程学院测控技术与仪器专业本科生
 
 %%%%%%%%%% Package %%%%%%%%%%%%
-% \usepackage{CJK}
 \usepackage{lmodern}
 \usepackage[T1]{fontenc}
 \usepackage{graphicx}                       % 支持插图处理
@@ -85,3 +84,4 @@
 \fi
 
 \usepackage[capitalize]{cleveref}
+\usepackage{natbib}
